# pharma-saas-management

./: .gitignore  CLAUDE.md  DESKTOP.md  OFFLINE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
public/favicon/: site.webmanifest
src/: main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx  routes.tsx
src/app/components/: OfflineSyncWatcher.tsx
src/app/contexts/: AppContext.tsx  LanguageContext.tsx  app-context.ts  language-translations.ts  useApp.ts  useLanguage.ts
src/app/pages/: AddCosmeticPage.tsx  AddMedicinePage.tsx  BranchesPage.tsx  CosmeticsPage.tsx  DashboardPage.tsx  ExpiryReportPage.tsx  InventoryPage.tsx  LoginPage.tsx  LowStockReportPage.tsx  MedicinesPage.tsx  POSPage.tsx  ProfilePage.tsx  ProfitReportPage.tsx  PurchasingPage.tsx  ReportsPage.tsx  SalesReportPage.tsx  SettingsPage.tsx  ShiftsPage.tsx  SubscriptionPage.tsx  UsersPage.tsx
src/app/router/: desktop-router.ts  index.tsx  routes.tsx  web-router.ts
src/contexts/: AppContext.tsx
src/desktop/: index.ts
src/desktop/offline/: index.ts  subscription-guard.ts
src/desktop/platform/: index.ts
src/features/subscription/: SubscriptionBlocker.tsx  TrialBanner.tsx
src/i18n/config/: i18n.ts
src/imports/: pharmacy-platform-design.md
src/imports/pasted_text/: platform-admin-dashboard.md
src/styles/: index.css  theme.css
(+253 files in other folders)
